--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,8 +25,8 @@ jobs:
 
     - name: Set environment variables
       run: |
-        echo "COSMOS_DB_ENDPOINT=${{ secrets.COSMOSDB_ENDPOINT  }}" >> $GITHUB_ENV
-        echo "COSMOS_DB_KEY=${{ secrets.COSMOSDB_KEY }}" >> $GITHUB_ENV
+        echo "COSMOSDB_ENDPOINT=${{ secrets.COSMOSDB_ENDPOINT  }}" >> $GITHUB_ENV
+        echo "COSMOSDB_KEY=${{ secrets.COSMOSDB_KEY }}" >> $GITHUB_ENV
 
     - name: Run tests
       env:
